--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1059,8 +1059,15 @@ img {
     width: 60%;
     height: 50vh;
     margin: 30px auto;
+}
+}
+@media (max-width: 575px) {
+  .plan {
+    display: inline-flexbox;
+    width: 60%;
+    height: 60vh;
+    margin: auto auto;
   }
-
 }
 /*--------------------------------------------------------------
 # Calendar Section
