--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1026,6 +1026,11 @@ img {
   border-radius: 100%;
   
 }
+@media (max-width: 575) {
+  .testimonials img {
+    width: 100px;
+  }
+}
 .btn {
   border-radius: 40px;
   padding: 7px 20px;
