--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -960,7 +960,7 @@ section,
   border: solid 2px rgb(129, 13, 13);
   border-radius: 20px;
   padding: 7px 20px;
-  background-color: var(--contrast-color);
+  background-color: #f9f9f9;
   color: rgb(129, 13, 13);
   margin: 20px 0;
 }
@@ -1071,7 +1071,7 @@ img {
     display: inline-flexbox;
     width: 60%;
     height: 60vh;
-    margin: auto auto;
+    margin: 40px auto;
   }
 }
 /*--------------------------------------------------------------
