--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1005,6 +1005,9 @@ img {
     align-items: center;
     width: 100%;
   }
+  .testimonials {
+    width: 100%;
+  }
 }
 .testimonials {
   align-items: center;
@@ -1082,6 +1085,9 @@ img {
     width: 60%;
     height: 70vh;
     margin: 50px auto;
+  }
+  .plan .btn {
+    margin-top: -10px;
   }
 }
 /*--------------------------------------------------------------
